Update securityservice/src/main/java/com/dirac/securityservice/Security/SecurityConfiguration.java
Co-authored-by: Copilot <175728472+Copilot@users.noreply.github.com>